# Zircon-SimModels

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: GenerateObjdump.cmake
docs/: interface.md  intro.md
include/zircon/: DDR.hpp  RVCPU.hpp
src/: DDR.cpp  RVCPU.cpp
tests/: RVCPU_CSR.cpp  RVCPU_DDR_Native_FloatMatmul.cpp  RVCPU_DDR_Native_ISA.cpp  RVCPU_DDR_Native_Matmul.cpp  RVCPU_DDR_SimImage.cpp
tests/programs/: isa_rv32imf.c  matmul8.c  matmul8f.c  riscv32.ld  start.S
